--- a/src/manifest.json
+++ b/src/manifest.json
@@ -8,7 +8,8 @@
 	},
 	"background"       : {
 		"scripts" : [
-			"background.js"
+			"background/functions.js",
+			"background/background.js"
 		]
 	},
 	"permissions" : [
