--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,7 +4,7 @@
 	"version"          : "0.1.0",
 	"description"      : "Open any URL in a popup",
 	"icons"            : {
-		"16" : "icons/fi-arrows-out.svg"
+		"16" : "icons/logo.svg"
 	},
 	"background"       : {
 		"scripts" : [
