Add setting page to customize popup properties

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -8,14 +8,19 @@
 	},
 	"background"       : {
 		"scripts" : [
+			"lib/options.js",
 			"background/functions.js",
 			"background/background.js"
 		]
+	},
+	"options_ui" : {
+		"page" : "options/options.html"
 	},
 	"permissions" : [
 		"menus",
 		"contextMenus",
 		"activeTab",
-		"tabs"
+		"tabs",
+		"storage"
 	]
 }
