Add browser_action and popup
Add browser_action and popup to list all tabs and switch their type.
WIP, we need to remove the setTimeout and put a setting button

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -16,6 +16,13 @@
 	"options_ui" : {
 		"page" : "options/options.html"
 	},
+	"browser_action" : {
+		"default_title": "Popup! Popup!",
+		"default_popup": "popup/popup.html",
+		"browser_style": true,
+		"default_icon" : "icons/logo.svg",
+		"default_area" : "tabstrip"
+	},
 	"permissions" : [
 		"menus",
 		"contextMenus",
