--- a/src/manifest.json
+++ b/src/manifest.json
@@ -17,10 +17,9 @@
 	},
 	"browser_action" : {
 		"default_title": "Popup! Popup!",
-		"default_popup": "popup/popup.html",
+		"default_popup": "browser_action/browser_action.html",
 		"browser_style": true,
-		"default_icon" : "icons/logo.svg",
-		"default_area" : "tabstrip"
+		"default_icon" : "icons/logo.svg"
 	},
 	"permissions" : [
 		"menus",
